[package]
name = "proximity"
version = "0.1.0"
authors = ["natefduncan <natefduncan@gmail.coM>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
itertools = "0.10.1"
itertools-num = "0.1.3"
ndarray = "0.15.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
